# Playground

CppPatterns/: .bazelrc  MODULE.bazel
CppPatterns/lru_cache/: BUILD.bazel  lru_cache.hpp
CppPatterns/tiny_vector/: BUILD  BUILD.bazel  get_asm.sh  perf.sh  tiny_vector.hpp  tiny_vector_inst.cpp  tiny_vector_perf_bench.cpp  tiny_vector_test.cpp
