module(
    name = "random_cc",
    version = "0.1.0",
)

bazel_dep(
    name = "protobuf",
    version = "27.0",
)
bazel_dep(name = "rules_cc", version = "0.0.17")

# Hedron's Compile Commands Extractor for Bazel
# https://github.com/hedronvision/bazel-compile-commands-extractor
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
    # commit = "0e990032f3c5a866e72615cf67e5ce22186dcb97",
    # commit = "4f28899228fb3ad0126897876f147ca15026151e",
    commit = "f5fbd4cee671d8d908f37c83abaf70fba5928fc7", # header only patch
    # Replace the commit hash (above) with the latest (https://github.com/hedronvision/bazel-compile-commands-extractor/commits/main).
    # Even better, set up Renovate and let it do the work for you (see "Suggestion: Updates" in the README).
)

# bazel_dep(
#     name = "rules_proto",
#     version = "7.0.2",
# )


bazel_dep(
    name = "googletest",
    version = "1.17.0",
)

bazel_dep(
    name    = "rules_fuzzing",
    version = "0.5.2",
)
